# My-Task-Manger-AIDD

./: GEMINI.md  README.md  main.py  pyproject.toml
database/: categories.txt  reminders.txt  tasks.txt  users.txt
features/: auth.py  backup.py  importer.py
features/analytics/: GEMINI.md  analytics.py
features/auth/: GEMINI.md
features/categories/: GEMINI.md  categories.py
features/export/: export.py
features/reminders/: GEMINI.md  reminders.py
features/tasks/: GEMINI.md  tasks.py
streamlit_app/: dashboard.py  time_helper.py
tools/: fix_duplicate_ids.py
